# amanuensis

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ACQUISITION_TEST_REPORT.md  ARCHITECTURE.md  ROADMAP.md  UPSTREAM.md  VISION.md
docs/decisions/: 0001-selected-corpus-passage-search.md  0002-modular-acquisition-adapters.md
src/amanuensis/: __init__.py  acquisition.py  cli.py  domain.py  extraction.py  hybrid.py  indexing.py  ports.py  queue.py  search.py  search_engine.py  search_store.py  webapp.py  workflow.py
src/amanuensis/adapters/: __init__.py  ephemera.py  qdrant.py
src/amanuensis/web/: search.css  search.html  search.js
tests/: test_acquisition.py  test_acquisition_queue.py  test_domain.py  test_ephemera_adapter.py  test_extraction.py  test_hybrid_search.py  test_repository_hygiene.py  test_search.py  test_webapp.py
