[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "amanuensis-library"
version = "0.1.0.dev0"
description = "Acquisition, curation, and discovery for Grimmory and compatible digital libraries"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Amanuensis contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/amanuensis"]
